# kernel-x86

./: .gitattributes  .gitignore  CMakeLists.txt  CompileWithWSL.bat  README.md  RebuildWithWSL.bat  build-bochs.py  build_bochs  bx_enh_dbg.ini  compile  rebuild  run_bochs  run_bochs.bat  windows.bxrc  wsl.bat  wsl_setup
initrd/: CMakeLists.txt
initrd/binary/: CMakeLists.txt
initrd/proc/: CMakeLists.txt  start.nasm
iso/boot/grub/: grub.cfg
lib/: CMakeLists.txt
lib/klib/: CMakeLists.txt  Coding Style.txt  Include Syntax - The C Preprocessor.url  RebuildWithWSL.bat  compile  rebuild
lib/klib/klib_ad/: klib_ad.md
lib/klib/klib_ad/x86/: CMakeLists.txt  cpuid.h  fastsystemcall.h  fpusse.h  gdt.h  idt.h  instruction.h  interrupt.h  ioapic.h  lapic.h  mm.paging.h  spinlock.h  x86.inc
lib/klib/klib_ad/x86/apic/: ioapic.c  lapic.c
lib/klib/klib_ad/x86/fpusse/: fpusse.asm  fpusse.c
lib/klib/klib_ad/x86/gdt/: gdt.c
lib/klib/klib_ad/x86/idt/: idt.c
lib/klib/klib_ad/x86/instruction/: creg.asm  msr.asm  msr.c  port_io.nasm
lib/klib/klib_ad/x86/mm/: bit32.c  paging.c  paging.init.nasm
lib/klib/klib_ad/x86/synch/: spinlock.c
lib/klib/klib_sl/: CMakeLists.txt  klib_sl.md  type.h
lib/klib/klib_sl/c/: cpuid.h  elf.h  klib_sl.h  memcmp.c  memcpy.c  memset.c  strcmp.c  string.h  strlen.c
lib/klib/klib_sl/cc/: klib_sl.hpp  string.hpp  waitable.hpp
lib/libelfff/: CMakeLists.txt  compile  elf.h  elfff_load.c  interface.h  libelfff.h
lib/libmalloc/: CMakeLists.txt  libmalloc.c  libmalloc.h
lib/libmm/: CMakeLists.txt  bit_op.h  libmm.c  libmm.h  type.h
lib/libproc/: CMakeLists.txt  Vector.h  compile.bat  libproc.cpp  libproc.hpp
lib/libramfs/: CMakeLists.txt  ramfs.c  ramfs.h
src/: CMakeLists.txt  asm.inc
src/init/: CMakeLists.txt  apic.c  cpp_entry.cpp  gdt.c  idt.c  init.asm  init.nasm  interrupt.asm  interrupt.c  interrupt.nasm  kinit_alloc.c  libelfff.required.c  libmalloc.required.c  libmm.required.c  libproc.required.cpp  multiboot_startup.c  panic.c  serial.c  user_syscall.c
src/init/include/: bochsdbg.h  check.h  cpp_entry.hpp  interrupt.h  kinit_alloc.h  memloc.h  multiboot2.h  panic.h  serial.h  user_syscall.h
src/initrd/: CMakeLists.txt
src/proc/: CMakeLists.txt  main.c
src/start/: CMakeLists.txt  linker.ld  multiboot2.inc  start.asm  start.nasm
